adjusted appearance on mobile devices and fixed animation code

--- a/css/style.css
+++ b/css/style.css
@@ -50,18 +50,18 @@ body {
     margin-bottom: 20px;
 }
 
-@-webkit-keyframes shake {
-    0% { -webkit-transform: translate(2px, 1px) rotate(0deg); } 
-    10% { -webkit-transform: translate(-1px, -2px) rotate(-1deg); }
-    20% { -webkit-transform: translate(-3px, 0px) rotate(1deg); }
-    30% { -webkit-transform: translate(0px, 2px) rotate(0deg); }
-    40% { -webkit-transform: translate(1px, -1px) rotate(1deg); }
-    50% { -webkit-transform: translate(-1px, 2px) rotate(-1deg); }
-    60% { -webkit-transform: translate(-3px, 1px) rotate(0deg); }
-    70% { -webkit-transform: translate(2px, 1px) rotate(-1deg); }
-    80% { -webkit-transform: translate(-1px, -1px) rotate(1deg); }
-    90% { -webkit-transform: translate(2px, 2px) rotate(0deg); }
-    100% { -webkit-transform: translate(1px, -2px) rotate(-1deg); }
+@keyframes shake {
+    0% { transform: translate(2px, 1px) rotate(0deg); } 
+    10% { transform: translate(-1px, -2px) rotate(-1deg); }
+    20% { transform: translate(-3px, 0px) rotate(1deg); }
+    30% { transform: translate(0px, 2px) rotate(0deg); }
+    40% { transform: translate(1px, -1px) rotate(1deg); }
+    50% { transform: translate(-1px, 2px) rotate(-1deg); }
+    60% { transform: translate(-3px, 1px) rotate(0deg); }
+    70% { transform: translate(2px, 1px) rotate(-1deg); }
+    80% { transform: translate(-1px, -1px) rotate(1deg); }
+    90% { transform: translate(2px, 2px) rotate(0deg); }
+    100% { transform: translate(1px, -2px) rotate(-1deg); }
 }
 
 .shake:active {
@@ -80,10 +80,10 @@ body {
 }
 
 #shakeball {
-    -webkit-animation-name: shake;
-    -webkit-animation-duration: 1.7s;
-    -webkit-transform-origin: 0% 500%;
-    -webkit-animation-iteration-count: 1;
+    animation-name: shake;
+    animation-duration: 1.7s;
+    transform-origin: 0% 500%;
+    animation-iteration-count: 1;
 }
 
 .fortune {
@@ -96,11 +96,19 @@ body {
 }
 
 @media (max-width: 480px) {
-    .background {
-        background-image: linear-gradient(#000055, #000011);
+    body {
+        border: none;
     }
 
-    .prompt {
-        color: #999999;
+    .background {
+        /* background-image: linear-gradient(#000055, #000011); */
+        background-image: none;
     }
+
+    /* .prompt {
+        color: #999999;
+    } */
+
+    /* .ball { 
+    } */
 }
